--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <dist:module dist:instant="true" />
 
@@ -38,7 +40,9 @@
         </receiver>
 
         <service android:name=".BackgroundService.ClipBoardService"
-            android:stopWithTask="false">
+            android:stopWithTask="false"
+            android:permission="android.permission.BIND_JOB_SERVICE"
+            android:exported="true">
         </service>
 
         <activity android:name=".Popup"
@@ -51,15 +55,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <receiver
-            android:name=".BackgroundService.SMSMMSReceiver"
-            android:enabled="true">
-            <intent-filter android:priority="1">
-                <action android:name="android.provider.Telephony.SMS_RECEIVED" />
-            </intent-filter>
-        </receiver>
-
     </application>
 
 </manifest>
